--- a/MDN/MDN/Views/Home/_ItemGrid.cshtml
+++ b/MDN/MDN/Views/Home/_ItemGrid.cshtml
@@ -4,7 +4,7 @@
 {
     <a asp-controller="Produto" asp-action="Details" asp-route-id="@item.T001_ID_PRODUTO">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row rcorners2">
                 <div class="col-md-5">
                     <img src="@item.caminhoImagem" alt="Primeiro Slide" class="img-responsive" style="max-width: 250px; max-height: 250px">
                 </div>
