--- a/MDN/MDN/wwwroot/css/site.css
+++ b/MDN/MDN/wwwroot/css/site.css
@@ -26,6 +26,12 @@
     margin: 15px;
 }
 
+.rcorners2 {
+    border-radius: 25px;
+    border: 2px solid rebeccapurple;
+    padding: 20px;
+}
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
