--- a/MDN/MDN/Views/Produto/MeusAnuncios.cshtml
+++ b/MDN/MDN/Views/Produto/MeusAnuncios.cshtml
@@ -1,45 +1,81 @@
 ﻿@model List<MDN.ViewModels.AnuncioGridVM>
 
 
-    @{
-        ViewData["Title"] = "Index";
-    }
+@{
+    ViewData["Title"] = "Index";
+}
 
-    <h2>Meus Anúncios</h2>
+<h2>Meus Anúncios</h2>
 
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 
-    @foreach (var item in Model)
-    {
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-2">
-                    <img src="@item.caminhoImagem" alt="Primeiro Slide" class="img-responsive" style="max-width: 100px; max-height: 100px">
-                </div>
-                <div class="col-md-5">
-                    <h3>@Html.DisplayFor(modelItem => item.T001_TITULO)</h3>
-                    <h5>R$ @Html.DisplayFor(modelItem => item.T001_PRECO)</h5>
-                    <h6>120 Visitas</h6>
-                    <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                        Editar
-                    </a>
-                    <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">
-                        <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
-                        Vendi
-                    </a>
-                    <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                        Excluir
-                    </a>
-                </div>
-                <div class="col-md-2">
+@foreach (var item in Model)
+{
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
+                <img src="@item.caminhoImagem" alt="Primeiro Slide" class="img-responsive" style="max-width: 100px; max-height: 100px">
+            </div>
+            <div class="col-md-5">
+                <h3>@Html.DisplayFor(modelItem => item.T001_TITULO)</h3>
+                <h5>R$ @Html.DisplayFor(modelItem => item.T001_PRECO)</h5>
+                <h6>120 Visitas</h6>
+                <a asp-action="Edit" asp-route-id="@item.T001_ID_PRODUTO">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    Editar
+                </a>
+                <a asp-action="DeleteConfirmed" asp-route-id="@item.T001_ID_PRODUTO">
+                    <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
+                    Vendi
+                </a>
                
-                </div>
+                <a href="#" class="aDelete" name="/Produto/DeleteConfirmed/@item.T001_ID_PRODUTO">
+                    <span  class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                    Excluir
+                </a>
+                @*</a>*@
+            </div>
+            <div class="col-md-2">
+
             </div>
         </div>
+    </div>
+
+}
+
+<div class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                @*<h5 class="modal-title">Modal title</h5>*@
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Excluir esse anuncio ?</p>
+            </div>
+            <div class="modal-footer">
+                <a href=""   class="button btn btn-primary btn_Excluir">Excluir</a>             
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-    }
+
+@section Scripts {
+    <script>
+
+        $('.aDelete').click(function () {
+            var controle = $(this).attr('name')
+            $('.modal').modal('show')
+            $('.btn_Excluir').attr('href', controle);
+           
+        })
+
+    </script>
+}
