--- a/MDN/MDN/Views/Produto/_ItemGrid.cshtml
+++ b/MDN/MDN/Views/Produto/_ItemGrid.cshtml
@@ -3,7 +3,8 @@
 @foreach (var item in Model)
 {
     <div class="container-fluid">
-        <div class="row">
+        <div class="row rcorners2" >
+
             <div class="col-md-5">
                 <a asp-action="Details" asp-route-id="@item.T001_ID_PRODUTO">
    
