Alterado UserName por User_Id Inserido Claim para salvar UF do usuario Inserido filtro de anuncios por UF

--- a/MDN/MDN/Views/Home/Index.cshtml
+++ b/MDN/MDN/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
 <br />
 @*<h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>*@
 
 <div class="container-fluid" style="background-color:rebeccapurple">
     <div class="row">
@@ -44,4 +44,10 @@
 
 </div>
 <br />
-            @Html.Partial("_ItemGrid")
+<div id="divAnuncios">
+    @Html.Partial("_ItemGrid")
+</div>
+
+
+
+
